# picwitch-tg-bot

./: .env_dist  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
bot/: __init__.py
bot/api/: client.py
bot/handlers/users/: __init__.py  blur.py  brightness.py  compress.py  filters.py  info.py  menu.py  mirror.py  palette.py  photo.py  rotate.py  start.py  thumbnail.py  watermark.py
bot/keyboards/default/: __init__.py  menus.py
bot/states/: __init__.py  states.py
bot/utils/: commands.py  config.py
docker/: Dockerfile
