[tool.poetry]
name = "picwitch-bot"
version = "1.0.0"
description = "Telegram Image Processing Bot"
authors = ["Pierre Linn <haarnel@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.2"
uvloop = "^0.15.3"
aiogram = "^2.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
